updated html texts, deleted and downloaded bew media, modified css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -7,32 +8,32 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
+
 <body>
 
   <header>
     <h1>Old vs Modern Technology</h1>
-    <p>A visual comparison between technology from the 2000s and today</p>
+    <p>A visual comparison between office look and technology from the 2000s and today</p>
   </header>
 
   <section class="poster">
+    <!-- OLD TECHNOLOGY COLUMN -->
     <div class="tech-column old">
       <h2>Old Technology (2000s)</h2>
-      <div class="image-container">
-        <img src="media/office.png" alt="2000s Office Setup" />
-        <img src="media/papers.png" alt="Papers" class="overlay overlay1" />
-        <img src="media/telephone.png" alt="Old Telephone" class="overlay overlay2" />
-        <img src="media/comp1.png" alt="Old Computer" class="overlay overlay3" />
-        <img src="media/phone1.jpg" alt="Flip Phone" class="overlay overlay4" />
+      <div class="image-container old-images">
+        <img src="media/2000-office-desk.png" alt="A 2000s office desk with old technology features" />
       </div>
     </div>
-    
+
+    <!-- MODERN TECHNOLOGY COLUMN -->
     <div class="tech-column modern">
       <h2>Modern Technology</h2>
       <div class="image-container modern-images">
-        
+        <img src="media/morden-office.png" alt="A modern, clean desk with morden technology features" />
       </div>
     </div>
   </section>
 
 </body>
+
 </html>
